# SEO-Audit-CLI

./: .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  seo_audit.py
.github/workflows/: ci.yml
audit/: __init__.py  batch.py  cli_history.py  compare.py  competitor.py  core.py  telegram_bot.py
audit/checks/: __init__.py  accessibility.py  base.py  content_quality.py  core_web_vitals.py  history.py  i18n.py  keyword.py  keyword_gap.py  links.py  meta.py  mobile.py  opengraph.py  performance.py  redirect.py  robots.py  security.py  sitemap.py  social.py  structured_data.py
audit/dashboard/: __init__.py
audit/reports/: export.py  html_report.py  json_report.py  markdown_report.py  pdf_report.py
audit/scheduler/: __init__.py
tests/: conftest.py  test_accessibility.py  test_batch.py  test_compare.py  test_core.py  test_export.py  test_history.py  test_keyword.py  test_keyword_gap.py  test_links.py  test_meta.py  test_mobile.py  test_opengraph.py  test_performance.py  test_redirect.py  test_reports.py  test_robots.py  test_security.py  test_structured_data.py  test_telegram.py
