[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "seo-audit-cli"
version = "3.0.0"
description = "Comprehensive SEO audit CLI with 11 check modules, robots.txt analysis, redirect chains, keyword density, Open Graph/Twitter Cards, batch scanning, CSV/JSON export, and Telegram reporting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "platoba"}]
keywords = ["seo", "audit", "cli", "website", "crawler", "accessibility", "wcag", "schema.org"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
reports = ["jinja2>=3.1.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "responses>=0.24.0",
]

[project.scripts]
seo-audit = "seo_audit:main"

[project.urls]
Homepage = "https://github.com/platoba/SEO-Audit-CLI"
Repository = "https://github.com/platoba/SEO-Audit-CLI"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
